[package]
name = "bacon-ls"
version = "0.25.0"
edition = "2024"
authors = ["Matteo Bigoi <bigo@crisidev.org>"]
description = "Bacon Language Server"
documentation = "https://github.com/crisidev/bacon-ls"
readme = "README.md"
homepage = "https://github.com/crisidev/bacon-ls"
repository = "https://github.com/crisidev/bacon-ls"
license-file = "LICENSE"
keywords = ["lsp", "bacon", "tokio", "neovim", "vim"]
categories = ["command-line-utilities", "text-editors", "asynchronous"]
rust-version = "1.85"

[features]
bacon = []
default = []

[dependencies]
anyhow = "1"
ansi-regex = "0.1.0"
argh = "0.1.13"
cargo = { version = "0.93.0", features = ["all-static"] }
flume = "0.12.0"
ls-types = "0.0.2"
notify = "8.2.0"
notify-debouncer-full = "0.6.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "time",
] }
tokio-util = "0.7.17"
toml = "0.9"
tower-lsp-server = "0.23.0"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", default-features = false, features = [
    "env-filter",
    "fmt",
] }

[dev-dependencies]
pretty_assertions = "1.4.1"
