[package]
name = "bacon-ls"
version = "0.28.0"
edition = "2024"
authors = ["Matteo Bigoi <bigo@crisidev.org>"]
description = "Bacon Language Server"
documentation = "https://github.com/crisidev/bacon-ls"
readme = "README.md"
homepage = "https://github.com/crisidev/bacon-ls"
repository = "https://github.com/crisidev/bacon-ls"
license-file = "LICENSE"
keywords = ["lsp", "bacon", "tokio", "neovim", "vim"]
categories = ["command-line-utilities", "text-editors", "asynchronous"]
rust-version = "1.94"

[features]
default = []

[dependencies]
anyhow = "1"
ansi-regex = "0.1.0"
argh = "0.1.19"
flume = "0.12.0"
ignore = "0.4"
ls-types = "0.0.6"
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
percent-encoding = "2.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = [
  "fs",
  "io-std",
  "io-util",
  "macros",
  "process",
  "rt-multi-thread",
  "time",
] }
tokio-util = "0.7.18"
toml = "1.0"
tower-lsp-server = "0.23.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", default-features = false, features = [
  "env-filter",
  "fmt",
] }

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.27.0"
